crates/air/tests/integration/snapshots/integration__format__force_overrides_default_excludes_with_stdin_write.snap
---
source: crates/air/tests/integration/format.rs
expression: "Command::new(binary_path()).current_dir(directory).stdin(Stdio::piped()).stdout(Stdio::piped()).stderr(Stdio::piped()).arg(\"format\").arg(\"--stdin-file-path\").arg(cpp11_path).arg(\"--force\").run_with_stdin(cpp11_contents.to_string())"
---
success: true
exit_code: 0
----- stdout -----
1 + 1

----- stderr -----

----- args -----
format --stdin-file-path cpp11.R --force
