crates/air/tests/integration/snapshots/integration__format__stdin_refuses_to_format_default_excludes-2.snap
---
source: crates/air/tests/integration/format.rs
expression: "Command::new(binary_path()).current_dir(directory).stdin(Stdio::piped()).stdout(Stdio::piped()).stderr(Stdio::piped()).arg(\"format\").arg(\"--stdin-file-path\").arg(Path::new(renv_directory).join(activate_path)).run_with_stdin(activate_contents.to_string())"
---
success: true
exit_code: 0
----- stdout -----
1+1
----- stderr -----

----- args -----
format --stdin-file-path renv/activate.R
